objects/advpm__Assignment_Rule__c.object
<CustomObject>
    <fields>
        <fullName>advpm__Additional_Notification_Template__c</fullName>
        <inlineHelpText>Provide Developer Name of the Email Template</inlineHelpText>
        <label>User Assignment Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Assignment_Body__c</fullName>
        <label>Assignment Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Assignment_Template__c</fullName>
        <inlineHelpText>Provide Developer Name of the Email Template</inlineHelpText>
        <label>Owner Assignment Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Base_Object__c</fullName>
        <label>Base Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Matter</fullName>
                    <default>true</default>
                    <label>Matter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Criteria_Body__c</fullName>
        <label>Criteria Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assignment Rule Set</label>
    <listViews>
        <fullName>advpm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Rule Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>